removed background image from less and added via js to prevent loading on mobiles

--- a/andiamo.less
+++ b/andiamo.less
@@ -8,7 +8,9 @@ body {
 }
 
 .header {
-    background: url('/arena.jpg') white 50% 50% no-repeat;
+    background-color: white;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
     background-size: auto;
     box-shadow: inset 0px 0px 20px 0px rgba(0, 0, 0, 0.5);
     padding: 6em 0 6em;
